# cbdb

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  FEATURES.md  README.md  TODO-architecture.md  TODO.md  app.py  db.py  dropbox_api.py  dropbox_sync.py  fly.toml  local_storage_api.py  nixpacks.toml  package-lock.json  pyproject.toml  railway.json  requirements.txt  storage_factory.py
.github/workflows/: fly-deploy.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: LoginForm.tsx
frontend/src/components/books/: BookCard.tsx  BookDetailPage.tsx  BookGrid.tsx  BookModal.tsx  BookTable.tsx  DownloadButton.tsx  EpubReader.tsx  EpubReaderPage.tsx  FilterPanel.tsx  Library.tsx  Pagination.tsx  ViewToggle.tsx
frontend/src/components/common/: DropboxErrorBanner.tsx  ErrorAlert.tsx  LoadingOverlay.tsx  StarRating.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  StatusBar.tsx
frontend/src/components/setup/: SetupForm.tsx
frontend/src/hooks/: useCovers.ts  useOnlineStatus.ts
frontend/src/lib/: api.ts  coverService.ts  errorService.ts  indexeddb.ts  logger.ts  offlineService.ts  pagination.ts  queryService.ts  sql.ts  utils.ts
frontend/src/store/: authStore.ts  libraryStore.ts
frontend/src/types/: api.ts  book.ts  filters.ts  libraryPath.ts
static/css/: style.css
templates/: base.html  book_detail.html  index.html  setup.html  wasm.html
test_data/: generate_fixtures.py
tests/: conftest.py
tests/e2e/: test_smoke.py
(+27 files in other folders)
